# terraprint3d

./: .gitignore  BAMBU_LAB_GUIDE.md  FEATURES.md  MULTI_COLOR_PRINTING.md  Makefile  README.md  main.py  pyproject.toml
data/: .gitkeep
examples/: colored_3mf.yaml  colored_amf.yaml  example_address.yaml  example_bounds.yaml  multicolor_seattle.yaml  multicolor_test.yaml  seattle_terrain.yaml  six_color_terrain.yaml  small_test.yaml  stepped_terrain.yaml
terraprint3d/: cache.py  preview.py
terraprint3d/config/: parser.py
terraprint3d/elevation/: fetcher.py
terraprint3d/geocoding/: service.py
terraprint3d/mesh/: colored_export.py  generator.py  multicolor.py  simple_multicolor.py
